Element Position is incorrect with regards to the ancestor box https://bugs.webkit.org/show_bug.cgi?id=9774 <rdar://problem/96548847>

Reviewed by Antti Koivisto.

Given:

  <div style="height: 500px">
      <span style="position: relative; top: -5%"><img></span>
      <div></div>
  </div>

The image should be shifted up by 25px (5% of the 500px container).
Instead it stays at its normal position -- the percentage is ignored.

The sibling <div> is the trigger. Without it, the span sits directly
inside the 500px container and the offset works. With the sibling,
the render tree wraps the inline content in an anonymous block:

  container (500px)
      anonymous block (auto height)
          span (position: relative, top: -5%)
              img
      div

relativePositionOffset() resolves percentage top against the
containing block's height. The containing block for the span is the
anonymous block, which has auto height. Percentage offsets against
auto height resolve to 0, so the offset is lost.

Anonymous blocks are a render tree implementation detail -- the
author never created one. The fix skips them when looking up the
containing block for relative position offset resolution, so the
percentage resolves against the authored container (500px) instead.

This is a workaround until anonymous block construction is avoided
entirely (webkit.org/b/307004).

* LayoutTests/imported/w3c/web-platform-tests/css/CSS2/positioning/relpos-percentage-offset-anonymous-block.html: Added.
* Source/WebCore/rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::relativePositionOffset):

Canonical link: https://commits.webkit.org/311275@main